# Pentandra

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
logic/: adjacency.py  incidence.py
presentation/: main.qml  qmldir  res.qrc
presentation/graph/: graphView.py
presentation/resources/styles/: Styles.qml  qmldir
